--- a/planet-explorer/package.json
+++ b/planet-explorer/package.json
@@ -14,7 +14,16 @@
     "@babylonjs/gui": "^7.35.0",
     "ethers": "^6.13.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "autoprefixer": "^10.4.20",
+    "clsx": "^2.1.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "viem": "^2.21.49",
+    "wagmi": "^2.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -28,6 +37,7 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "prettier": "^3.3.3"
   }
 }
