--- a/planet-explorer/package.json
+++ b/planet-explorer/package.json
@@ -12,15 +12,16 @@
   "dependencies": {
     "@babylonjs/core": "^7.35.0",
     "@babylonjs/gui": "^7.35.0",
-    "ethers": "^6.13.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
+    "ethers": "^6.13.4",
+    "noisejs": "^2.1.0",
     "postcss": "^8.4.49",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwindcss": "^3.4.15",
     "viem": "^2.21.49",
     "wagmi": "^2.13.0"
@@ -35,9 +36,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "prettier": "^3.3.3",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10",
-    "prettier": "^3.3.3"
+    "vite": "^5.4.10"
   }
 }
